--- a/web-dashboard/dashboard.html
+++ b/web-dashboard/dashboard.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -118,9 +118,13 @@
 
         .charts-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 20px;
             margin-bottom: 20px;
+        }
+
+        .chart-card.full-width {
+            grid-column: 1 / -1;
         }
 
         .chart-card {
@@ -386,7 +390,7 @@
                 </div>
             </div>
 
-            <div class="chart-card">
+            <div class="chart-card full-width">
                 <div class="chart-title">Combined Vital Signs</div>
                 <div class="chart-container">
                     <canvas id="combined-chart"></canvas>
@@ -474,7 +478,16 @@
                         }
                     },
                     x: {
-                        display: false
+                        display: true,
+                        grid: {
+                            color: 'rgba(0, 0, 0, 0.05)'
+                        },
+                        ticks: {
+                            maxRotation: 0,
+                            minRotation: 0,
+                            autoSkip: true,
+                            maxTicksLimit: 8
+                        }
                     }
                 },
                 plugins: {
@@ -507,7 +520,18 @@
                     y: {
                         ...chartConfig.options.scales.y,
                         min: 40,
-                        max: 200
+                        max: 200,
+                        title: {
+                            display: true,
+                            text: 'BPM'
+                        }
+                    },
+                    x: {
+                        ...chartConfig.options.scales.x,
+                        title: {
+                            display: true,
+                            text: 'Time'
+                        }
                     }
                 }
             }
@@ -534,7 +558,18 @@
                     y: {
                         ...chartConfig.options.scales.y,
                         min: 0,
-                        max: 40
+                        max: 40,
+                        title: {
+                            display: true,
+                            text: 'BPM'
+                        }
+                    },
+                    x: {
+                        ...chartConfig.options.scales.x,
+                        title: {
+                            display: true,
+                            text: 'Time'
+                        }
                     }
                 }
             }
@@ -564,7 +599,22 @@
                         min: 0,
                         max: 3,
                         ticks: {
-                            stepSize: 1
+                            stepSize: 1,
+                            callback: function(value) {
+                                const labels = ['Dry', 'Low', 'Med', 'High'];
+                                return labels[value];
+                            }
+                        },
+                        title: {
+                            display: true,
+                            text: 'Level'
+                        }
+                    },
+                    x: {
+                        ...chartConfig.options.scales.x,
+                        title: {
+                            display: true,
+                            text: 'Time'
                         }
                     }
                 }
@@ -598,7 +648,8 @@
                 ...chartConfig.options,
                 plugins: {
                     legend: {
-                        display: true
+                        display: true,
+                        position: 'top'
                     }
                 },
                 scales: {
@@ -606,7 +657,38 @@
                     y: {
                         ...chartConfig.options.scales.y,
                         min: 0,
-                        max: 100
+                        max: 100,
+                        title: {
+                            display: true,
+                            text: 'Normalized (%)'
+                        }
+                    },
+                    x: {
+                        display: true,
+                        grid: {
+                            color: 'rgba(0, 0, 0, 0.05)'
+                        },
+                        ticks: {
+                            maxRotation: 0,
+                            minRotation: 0,
+                            autoSkip: true,
+                            maxTicksLimit: 12,
+                            callback: function(value, index, ticks) {
+                                // Show every Nth label to avoid clutter
+                                const label = this.getLabelForValue(value);
+                                // Parse elapsed seconds from label (e.g., "30s" -> 30)
+                                const seconds = parseInt(label);
+                                // Show labels at nice intervals: 0, 30, 60, 90, 120...
+                                if (seconds % 30 === 0) {
+                                    return label;
+                                }
+                                return '';
+                            }
+                        },
+                        title: {
+                            display: true,
+                            text: 'Elapsed Time'
+                        }
                     }
                 }
             }
@@ -663,7 +745,12 @@
         }
 
         function updateDashboard(data) {
-            const timestamp = new Date().toLocaleTimeString();
+            // Calculate elapsed time since session start for cleaner labels
+            if (!sessionStartTime) {
+                sessionStartTime = Date.now();
+            }
+            const elapsedSeconds = Math.floor((Date.now() - sessionStartTime) / 1000);
+            const timestamp = `${elapsedSeconds}s`;
 
             // Update metric cards
             document.getElementById('hr-value').textContent = data.hr || '--';
@@ -725,8 +812,8 @@
         }
 
         function updateCombinedChart(label, hr, rr) {
-            const maxDataPoints = 60;
-
+            // No max limit - keep all session data for overview
+            
             // Normalize HR (40-200) and RR (0-40) to 0-100 scale
             const normalizedHR = ((hr - 40) / (200 - 40)) * 100;
             const normalizedRR = (rr / 40) * 100;
@@ -735,11 +822,8 @@
             combinedChart.data.datasets[0].data.push(normalizedHR);
             combinedChart.data.datasets[1].data.push(normalizedRR);
 
-            if (combinedChart.data.labels.length > maxDataPoints) {
-                combinedChart.data.labels.shift();
-                combinedChart.data.datasets[0].data.shift();
-                combinedChart.data.datasets[1].data.shift();
-            }
+            // Keep all data for full session view
+            // No shifting - this chart shows complete history
 
             combinedChart.update('none');
         }
